# open-dibr-v2

./: .gitignore  README.md
dataset/: config.json
open-dibr/: CMakeLists.txt
open-dibr/src/: Application.h  CameraVisibilityHelper.h  PCApplication.h  Pool.h  VRApplication.h  dilate_fragment.fs  fragment.fs  glHelper.h  inpaint_fragment.fs  main.cpp  toinput_fragment.fs  toinput_vertex.fs  vertex.fs
preprocessing/: CMakeLists.txt  imgui.ini
preprocessing/include/FastQuadricMeshSimplification/: Simplify.h
preprocessing/include/glad/: gl.c
preprocessing/include/glad/glad/: gl.h
preprocessing/src/: Application.h  FramebufferController.h  ShaderController.h  TexController.h  ioHelper.h  main.cpp
preprocessing/src/shaders/: copy_vertex.fs  dilate_fragment.fs  edge_fragment.fs  erode_fragment.fs  fragment.fs  geometry.fs  mask_fragment.fs  vertex.fs
